<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_eula_agree">I Agree</string>
    <string name="auto_detect">Auto-Detect</string>
    <string name="keep_original">Keep Original</string>
    <string name="linebreaks_default">0</string>
    <string name="menu_editor_edit">Edit</string>
    <string name="menu_editor_edit_bookmark_line">Bookmark Line</string>
    <string name="menu_editor_edit_bookmark_selection">Bookmark Selection</string>
    <string name="menu_editor_edit_comment_out">Comment Out</string>
    <string name="menu_editor_edit_goto_line">Goto Line</string>
    <string name="menu_editor_edit_indent_selection">Indent Selection</string>
    <string name="menu_editor_edit_unindent_selection">Unindent Selection</string>
    <string name="menu_editor_edit_view_bookmarks">View Bookmarks</string>
    <string name="menu_editor_feedback">Feedback</string>
    <string name="menu_editor_file">File</string>
    <string name="menu_editor_file_encoding">Encoding</string>
    <string name="menu_editor_file_force_syntax">Force Syntax</string>
    <string name="menu_editor_file_line_delimiters">Line Delimiters</string>
    <string name="menu_editor_file_new">New</string>
    <string name="menu_editor_file_new_from_template">New From Template</string>
    <string name="menu_editor_file_open">Open</string>
    <string name="menu_editor_file_properties">Properties</string>
    <string name="menu_editor_file_save">Save</string>
    <string name="menu_editor_file_save_as">Save As</string>
    <string name="menu_editor_find">Find</string>
    <string name="menu_editor_go_premium">Go Premium</string>
    <string name="menu_editor_preview">Preview</string>
    <string name="menu_editor_preview_in_browser">Preview In Browser</string>
    <string name="menu_editor_preview_quick_preview">Quick Preview</string>
    <string name="menu_editor_settings">Settings</string>
    <string name="menu_editor_tools">Tools</string>
    <string name="menu_editor_tools_colour_picker">Colour Picker</string>
    <string name="menu_editor_tools_download_source">Download Source</string>
    <string name="menu_editor_tools_format_html">Format HTML</string>
    <string name="menu_editor_tools_snippets">Snippets</string>
    <string name="settings_cloud_add_server">Add Server</string>
    <string name="settings_cloud_category_cloud">Cloud Services</string>
    <string name="settings_cloud_category_servers">FTP(S) Servers</string>
    <string name="settings_cloud_dropbox">Connect to Dropbox</string>
    <string name="settings_cloud_dropbox_connect">Link your Dropbox account to Quoda</string>
    <string name="settings_cloud_googledrive">Connect to Google Drive</string>
    <string name="settings_cloud_googledrive_connect">Link your Google Drive account to Quoda</string>
    <string name="settings_editor_additional_keys">Show Additional Keys</string>
    <string name="settings_editor_additional_keys_summary">Show additional keys above the keyboard</string>
    <string name="settings_editor_auto_close_bracket">Auto-Close Brackets</string>
    <string name="settings_editor_auto_close_bracket_summary">Automatically close open parenthesis/bracket/brace when typing</string>
    <string name="settings_editor_auto_close_quote">Auto-Close Quotes</string>
    <string name="settings_editor_auto_close_quote_summary">Automatically close single/double quote when typing</string>
    <string name="settings_editor_autoindent">Auto Indentation</string>
    <string name="settings_editor_autoindent_summary">Automatically indent new lines to match the line above</string>
    <string name="settings_editor_codecompletion">Code Completion</string>
    <string name="settings_editor_linenumbers">Show Line Numbers</string>
    <string name="settings_editor_number_of_spaces">Number of Spaces In Tab</string>
    <string name="settings_editor_number_of_spaces_summary">Number of spaces to use instead of a tab</string>
    <string name="settings_editor_read_only_mode">Read-Only Mode</string>
    <string name="settings_editor_syntaxhighlight">Syntax Highlighting</string>
    <string name="settings_editor_tabs">Use Spaces Instead of Tabs</string>
    <string name="settings_editor_word_wrap">Word Wrap</string>
    <string name="settings_files_ask_for_save_on_exit">Ask To Save Files On Exit</string>
    <string name="settings_files_ask_for_save_on_exit_summary">Always ask to save modified files when exiting Quoda</string>
    <string name="settings_files_encoding_open">Encoding For Opening Files</string>
    <string name="settings_files_encoding_open_summary">Encoding to use when opening files</string>
    <string name="settings_files_encoding_save">Encoding For Saving Files</string>
    <string name="settings_files_encoding_save_summary">Encoding to use when saving files</string>
    <string name="settings_files_linebreaks">Linebreaks For Saving Files</string>
    <string name="settings_files_linebreaks_summary">Linebreak type to use when saving files</string>
    <string name="settings_header_about">About</string>
    <string name="settings_header_about_summary">View information about Quoda and Licenses</string>
    <string name="settings_header_appearance">Appearance</string>
    <string name="settings_header_appearance_summary">Configure the appearance</string>
    <string name="settings_header_cloud_servers">Cloud &amp; Servers</string>
    <string name="settings_header_cloud_servers_summary">Configure cloud storage and servers</string>
    <string name="settings_header_contribute">Contribute</string>
    <string name="settings_header_contribute_summary">"Contribute to Quoda's development"</string>
    <string name="settings_header_editor">Editor</string>
    <string name="settings_header_editor_summary">Configure how the editor behaves</string>
    <string name="settings_header_files">Files</string>
    <string name="settings_header_files_summary">Configure how files are handled</string>
    <string name="settings_header_keybindings">Keybindings</string>
    <string name="settings_header_keybindings_summary">Configure keybindings</string>
    <string name="settings_header_upgrade">Upgrade to Premium</string>
    <string name="settings_header_upgrade_summary">Unlock Premium Features</string>
    <string name="settings_keybindings_bookmark_line">Bookmark Line</string>
    <string name="settings_keybindings_bookmark_selected_line">Bookmark Selected Line</string>
    <string name="settings_keybindings_bookmarks">Bookmarks Dialog</string>
    <string name="settings_keybindings_category_document_navigation">Document Navigation</string>
    <string name="settings_keybindings_category_editor">Editor Keybindings</string>
    <string name="settings_keybindings_category_files">File Keybindings</string>
    <string name="settings_keybindings_category_menu">Menu Keybindings</string>
    <string name="settings_keybindings_category_preview">Preview Keybindings</string>
    <string name="settings_keybindings_category_special_keys">Special Keys</string>
    <string name="settings_keybindings_category_tools">Tools Keybindings</string>
    <string name="settings_keybindings_close_document">Close Current Document</string>
    <string name="settings_keybindings_color_picker">Color Picker</string>
    <string name="settings_keybindings_copy">Copy</string>
    <string name="settings_keybindings_cut">Cut</string>
    <string name="settings_keybindings_download_source">Download Source</string>
    <string name="settings_keybindings_encoding">Encoding</string>
    <string name="settings_keybindings_find">Find</string>
    <string name="settings_keybindings_force_syntax">Force Syntax</string>
    <string name="settings_keybindings_goto_line">Goto Line</string>
    <string name="settings_keybindings_linebreaks">Linebreaks</string>
    <string name="settings_keybindings_new">New</string>
    <string name="settings_keybindings_new_from_template">New From Template</string>
    <string name="settings_keybindings_next_file">Next File</string>
    <string name="settings_keybindings_next_word">Next Word</string>
    <string name="settings_keybindings_open">Open</string>
    <string name="settings_keybindings_paste">Paste</string>
    <string name="settings_keybindings_preview">Preview</string>
    <string name="settings_keybindings_preview_in_browser">Preview In Browser</string>
    <string name="settings_keybindings_previous_file">Previous File</string>
    <string name="settings_keybindings_previous_word">Previous Word</string>
    <string name="settings_keybindings_properties">Properties Dialog</string>
    <string name="settings_keybindings_redo">Redo</string>
    <string name="settings_keybindings_save">Save</string>
    <string name="settings_keybindings_save_all">Save All</string>
    <string name="settings_keybindings_save_as">Save As</string>
    <string name="settings_keybindings_select_all">Select All</string>
    <string name="settings_keybindings_settings">Settings</string>
    <string name="settings_keybindings_show_edit">Show Edit Menu</string>
    <string name="settings_keybindings_show_file">Show File Menu</string>
    <string name="settings_keybindings_show_insert">Show Insert Menu</string>
    <string name="settings_keybindings_show_menu">Show Menu</string>
    <string name="settings_keybindings_show_tools_menu">Show Tools Menu</string>
    <string name="settings_keybindings_snippets">Snippets</string>
    <string name="settings_keybindings_undo">Undo</string>
    <string name="settings_keybindings_use_volume_down">Volume Down As Alt Key</string>
    <string name="settings_keybindings_use_volume_down_summary">Simulate alt using volume down key</string>
    <string name="settings_keybindings_use_volume_up">Volume Up As Ctrl Key</string>
    <string name="settings_keybindings_use_volume_up_summary">Simulate ctrl using volume up key</string>
</resources>